--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaceCertify - Real-Time Exam Verification</title>
+
+    <title>FaceCertify - Real-Time Exam Verification by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent</title>
+    <meta name="description" content="FaceCertify is a real-time exam verification project by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, and Elwin Vincent from Viswajyothi College of Engineering. It uses AI and facial recognition to ensure academic integrity.">
+    <meta name="keywords" content="FaceCertify, Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent, Neha Beegam PE, Viswajyothi College of Engineering, VJCET, Real-Time Exam Verification, Facial Recognition, AI Project, Academic Integrity, Mini Project">
+    <meta name="author" content="Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="FaceCertify - Real-Time Exam Verification Project">
+    <meta property="og:description" content="An innovative AI project by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, and Elwin Vincent to enhance academic integrity using real-time facial recognition.">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="FaceCertify - Real-Time Exam Verification Project">
+    <meta property="twitter:description" content="An innovative AI project by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, and Elwin Vincent to enhance academic integrity using real-time facial recognition.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -15,7 +26,7 @@
             --card-bg: rgba(20, 20, 40, 0.7);
             --border-color: rgba(0, 191, 255, 0.2);
             --glow-shadow: 0 0 15px rgba(0, 191, 255, 0.5);
-            --danger-color: #ff5c5c;
+            --warning-color: #ff9933; /* A suitable amber/orange */
         }
 
         * {
@@ -201,12 +212,12 @@
             align-items: center;
             gap: 1rem;
         }
-        .challenge-column h3 { color: var(--danger-color); border-bottom: 2px solid var(--danger-color); }
+        .challenge-column h3 { color: var(--warning-color); border-bottom: 2px solid var(--warning-color); }
         .solution-column h3 { color: var(--primary-accent); border-bottom: 2px solid var(--primary-accent); }
         
         .info-card {
             background: var(--card-bg);
-            border-left: 4px solid var(--danger-color);
+            border-left: 4px solid var(--warning-color);
             padding: 1rem 1.5rem;
             margin-bottom: 1rem;
             border-radius: 0 8px 8px 0;
@@ -309,29 +320,48 @@
             text-align: center;
         }
         .team-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1.5rem;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 2rem;
             margin-bottom: 3rem;
         }
-        .team-member {
+        .team-member, .guide-mention {
             background: var(--card-bg);
-            padding: 0.8rem 1.5rem;
-            border-radius: 50px;
+            padding: 2rem 1.5rem;
+            border-radius: 15px;
             border: 1px solid var(--border-color);
+            transition: all 0.3s ease;
+        }
+        .team-member:hover, .guide-mention:hover {
+            transform: translateY(-10px);
+            box-shadow: var(--glow-shadow);
+        }
+        .team-member img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 3px solid var(--primary-accent);
+            margin-bottom: 1rem;
+            object-fit: cover;
+        }
+        .team-member h4 {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: var(--text-light);
         }
         .guide-mention {
-            margin-top: 2rem;
+            grid-column: 1 / -1; /* Make guide span full width on grid */
+            max-width: 400px;
+            margin: 2rem auto 0 auto;
         }
         .guide-mention h4 {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 400;
             color: #aaa;
             margin-bottom: 0.5rem;
         }
         .guide-name {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             font-weight: 600;
             color: var(--primary-accent);
         }
@@ -540,14 +570,27 @@
                 <h2 class="section-title">Our Team</h2>
                 <p class="section-subtitle">A project by the talented students of Viswajyothi College of Engineering and Technology.</p>
                 <div class="team-grid">
-                    <div class="team-member">Anson Mathew Jaison</div>
-                    <div class="team-member">Arjun Gireesh</div>
-                    <div class="team-member">Ebin Manoj</div>
-                    <div class="team-member">Elwin Vincent</div>
+                    <div class="team-member">
+                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Anson" alt="Illustration of Anson Mathew Jaison">
+                        <h4>Anson Mathew Jaison</h4>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Arjun" alt="Illustration of Arjun Gireesh">
+                        <h4>Arjun Gireesh</h4>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Ebin" alt="Illustration of Ebin Manoj">
+                        <h4>Ebin Manoj</h4>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Elwin" alt="Illustration of Elwin Vincent">
+                        <h4>Elwin Vincent</h4>
+                    </div>
                 </div>
                 <div class="guide-mention">
+                    <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Neha" alt="Illustration of Ms. Neha Beegam PE">
                     <h4>Under the guidance of</h4>
-                    <p class="guide-name">Ms. Neha Beegam PE, Asst. Professor, CSE Dept.</p>
+                    <p class="guide-name">Ms. Neha Beegam PE</p>
                 </div>
             </div>
         </section>
