--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>FaceCertify - Real-Time Exam Verification by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent</title>
+    <title>FaceCertify - Real-Time Exam Verification</title>
     <meta name="description" content="FaceCertify is a real-time exam verification project by Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, and Elwin Vincent from Viswajyothi College of Engineering. It uses AI and facial recognition to ensure academic integrity.">
     <meta name="keywords" content="FaceCertify, Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent, Neha Beegam PE, Viswajyothi College of Engineering, VJCET, Real-Time Exam Verification, Facial Recognition, AI Project, Academic Integrity, Mini Project">
     <meta name="author" content="Anson Mathew Jaison, Arjun Gireesh, Ebin Manoj, Elwin Vincent">
@@ -571,7 +571,7 @@
                 <p class="section-subtitle">A project by the talented students of Viswajyothi College of Engineering and Technology.</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Anson" alt="Illustration of Anson Mathew Jaison">
+                        <img src="https://ansonblogs.netlify.app/images/ansonjaison.jpg" alt="Anson Mathew Jaison's DP">
                         <h4>Anson Mathew Jaison</h4>
                     </div>
                     <div class="team-member">
@@ -579,16 +579,16 @@
                         <h4>Arjun Gireesh</h4>
                     </div>
                     <div class="team-member">
-                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Ebin" alt="Illustration of Ebin Manoj">
+                        <img src="https://media.licdn.com/dms/image/v2/D5603AQFTAbf9H-oGOw/profile-displayphoto-shrink_800_800/B56ZU9_Ws_HoAk-/0/1740501778186?e=1758153600&v=beta&t=m35Mhf2qy61kLag9Y1N5ODWmUxuUkR09m_gtWDj89mE" alt="Ebin Manoj's DP">
                         <h4>Ebin Manoj</h4>
                     </div>
                     <div class="team-member">
-                        <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Elwin" alt="Illustration of Elwin Vincent">
+                        <img src="https://media.licdn.com/dms/image/v2/D5603AQEE3-V5pfZWeQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1722568024569?e=1758153600&v=beta&t=kiKIVj2Y5qEJRGLheNem5A3l3xEYWvliZYkS832FqFA" alt="Elwin Vincent's DP">
                         <h4>Elwin Vincent</h4>
                     </div>
                 </div>
                 <div class="guide-mention">
-                    <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Neha" alt="Illustration of Ms. Neha Beegam PE">
+                    <img src="https://media.licdn.com/dms/image/v2/D5603AQGpRIGIH7Ga9Q/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1729361075077?e=1758153600&v=beta&t=nfjuw2fcEzfgmxBoT2kaz_voX7etPCssY9KDWWc2WNc" alt="Ms. Neha Beegam PE">
                     <h4>Under the guidance of</h4>
                     <p class="guide-name">Ms. Neha Beegam PE</p>
                 </div>
