--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                     </div>
                 </div>
                 <div class="guide-mention">
-                    <img src="https://media.licdn.com/dms/image/v2/D5603AQGpRIGIH7Ga9Q/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1729361075077?e=1758153600&v=beta&t=nfjuw2fcEzfgmxBoT2kaz_voX7etPCssY9KDWWc2WNc" alt="Ms. Neha Beegam PE">
+                    <img src="https://api.dicebear.com/8.x/bottts-neutral/svg?seed=Neha" alt="Ms. Neha Beegam PE">
                     <h4>Under the guidance of</h4>
                     <p class="guide-name">Ms. Neha Beegam PE</p>
                 </div>
